crates/schematic/tests/snapshots/generator_test__template_json__custom_values.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
{
  // This is a boolean with a medium length description.
  // @env TEMPLATE_BOOLEAN
  "boolean": false,

  "empty_array": [],

  "empty_object": {},

  // This is an enum with a medium length description and deprecated.
  // @deprecated Dont use enums!
  // @values "foo" | "bar" | "baz"
  "enums": "foo",

  // This field is testing array expansion.
  "expand_array": [
    {
      // An optional enum.
      "enums": "foo",

      // An optional string.
      "opt": ""
    }
  ],

  "expand_array_primitive": [
    0
  ],

  // This field is testing object expansion.
  "expand_object": {
    "example": {
      // An optional enum.
      "enums": "foo",

      // An optional string.
      "opt": ""
    }
  },

  "expand_object_primitive": {
    "example": 0
  },

  // @values "foo" | "bar" | "baz"
  "fallback_enum": "foo",

  // This is a float thats deprecated.
  // @deprecated
  // "float32": 0.0,

  // This is a float.
  "float64": 1.23,

  // This is a map of numbers.
  // "map": {},

  // This is a nested struct with its own fields.
  "nested": {
    // An optional enum.
    "enums": "foo",

    // An optional string.
    "opt": "custom nested value"
  },

  // This is a number with a long description.
  // This is a number with a long description.
  "number": 0,

  // This is a nested struct with its own fields.
  "one": {
    // This is another nested field.
    "two": {
      // An optional string.
      "opt": "",
    }
  },

  // This is a string.
  "string": "custom value",

  // This is a list of strings.
  "vector": []
}
