crates/schematic/tests/snapshots/generator_test__template_json__defaults.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
{
  // This is a boolean with a medium length description.
  // @env TEMPLATE_BOOLEAN
  "boolean": false,

  // This is a string.
  "string": "abc",

  // This is a number with a long description.
  // This is a number with a long description.
  "number": 0,

  // This is a float thats deprecated.
  // @deprecated
  // "float32": 0.0,

  // This is a float.
  "float64": 1.23,

  // This is a list of strings.
  "vector": [],

  // This is a map of numbers.
  // "map": {},

  // This is an enum with a medium length description and deprecated.
  // @deprecated Dont use enums!
  // @values "foo" | "bar" | "baz"
  "enums": "foo",

  // @values "foo" | "bar" | "baz"
  "fallbackEnum": "foo",

  // This is a nested struct with its own fields.
  "nested": {
    // An optional string.
    "opt": "",

    // An optional enum.
    "enums": "foo"
  },

  // This is a nested struct with its own fields.
  "one": {
    // This is another nested field.
    "two": {
      // An optional string.
      // @env ENV_PREFIX_OPT
      "opt": "",
    },
  },

  // This field is testing array expansion.
  "expandArray": [
    {
      // An optional string.
      "opt": "",

      // An optional enum.
      "enums": "foo"
    }
  ],

  "expandArrayPrimitive": [
    0
  ],

  "emptyArray": [],

  // This field is testing object expansion.
  "expandObject": {
    "example": {
      // An optional string.
      "opt": "",

      // An optional enum.
      "enums": "foo"
    }
  },

  "expandObjectPrimitive": {
    "example": 0
  },

  "emptyObject": {}
}
