crates/schematic/tests/snapshots/generator_test__template_json__only_fields.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
{
  // This is a string.
  "string": "abc",

  // This is a float thats deprecated.
  // @deprecated
  // "float32": 0.0,
}
