crates/schematic/tests/snapshots/generator_test__template_json__without_comments.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
{
  "boolean": false,
  "empty_array": [],
  "empty_object": {},
  "enums": "foo",
  "expand_array": [
    {
      "enums": "foo",
      "opt": ""
    }
  ],
  "expand_array_primitive": [
    0
  ],
  "expand_object": {
    "example": {
      "enums": "foo",
      "opt": ""
    }
  },
  "expand_object_primitive": {
    "example": 0
  },
  "fallback_enum": "foo",
  "float64": 1.23,
  "nested": {
    "enums": "foo",
    "opt": ""
  },
  "number": 0,
  "one": {
    "two": {
      "opt": "",
    }
  },
  "string": "abc",
  "vector": []
}
